--- a/src/resources/sass/components/_equipe.sass
+++ b/src/resources/sass/components/_equipe.sass
@@ -41,6 +41,14 @@
             object-fit: cover
             border-radius: 50%
             margin-bottom: 2rem
+          .leticia-calil
+            object-position: center 90% 
+          .jaqueline-ramos
+            object-position: center 0%
+          .sara-hirata
+            object-position: center 80%
+          .neviane-boldori
+            object-position: center 0%
 
 @media only screen and (max-width: 456px)
   .s-equipe
