--- a/src/sp/resources/sass/main.css
+++ b/src/sp/resources/sass/main.css
@@ -743,7 +743,7 @@ body {
   }
 }
 .s-banner .imgBanner {
-  background-image: url("../img/background-index-new-3.webp");
+  background-image: url("../img/background_nova_recepcao.webp");
   background-position: center center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -752,6 +752,17 @@ body {
   min-height: 750px;
   display: flex;
   align-items: center;
+}
+.s-banner .imgBanner::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #000;
+  opacity: 0.5;
+  z-index: 2;
 }
 .s-banner .imgBanner .background-overlay {
   min-height: 750px;
@@ -762,6 +773,7 @@ body {
 }
 .s-banner .container {
   margin: 0 10%;
+  z-index: 3 !important;
 }
 .s-banner .container .msgBanner .text-first p {
   font-size: 39px;
@@ -1155,18 +1167,122 @@ body {
   color: #fff;
 }
 
-.s-tratamento-base .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left .agendarIndex {
+.s-tratamento-base {
+  background-color: #f8f8f8;
+  overflow: hidden;
+}
+.s-tratamento-base .info-tratamento-base {
+  display: flex;
+  align-items: stretch;
+  min-height: 80vh;
+}
+.s-tratamento-base .tratamento-base-left {
+  width: 40%;
+  padding: 5rem;
+  position: relative;
+  z-index: 2;
+  background-color: #f8f8f8;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+.s-tratamento-base .tratamento-base-left .content-tratamentoBase-left h2 {
+  font-size: 2.5rem;
+  margin-bottom: 1.5rem;
+}
+.s-tratamento-base .tratamento-base-left .content-tratamentoBase-left p {
+  font-size: 1.1rem;
+  line-height: 1.6;
+  margin-bottom: 2rem;
+}
+.s-tratamento-base .tratamento-base-left .content-tratamentoBase-left .agendarIndex {
+  display: inline-block;
   padding: 1rem 1.5rem;
   background: #c8bcac;
   font-weight: bold;
   border-radius: 30px;
-  color: #fff;
-  margin-top: 1rem;
-}
-.s-tratamento-base .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left .agendarIndex:hover {
-  transform: translateY(-10px);
+  color: #fff !important;
+  text-decoration: none;
   transition: all 0.2s;
-  box-shadow: 4px 4px 4px 8px;
+}
+.s-tratamento-base .tratamento-base-left .content-tratamentoBase-left .agendarIndex:hover {
+  transform: translateY(-5px);
+  box-shadow: 0 8px 15px rgba(0, 0, 0, 0.1);
+}
+.s-tratamento-base .tratamentoBase-right {
+  width: 100%;
+  height: auto;
+  position: relative;
+  z-index: 3;
+  margin-left: -10%;
+}
+.s-tratamento-base .tratamentoBase-right .img-right-tratamentoBase {
+  width: 100%;
+  height: 100%;
+}
+.s-tratamento-base .tratamentoBase-right .img-right-tratamentoBase img {
+  height: 50rem !important;
+  -o-object-fit: cover !important;
+     object-fit: cover !important;
+}
+.s-tratamento-base .glide {
+  width: 100%;
+  height: 100%;
+}
+.s-tratamento-base .glide .glide__track, .s-tratamento-base .glide .glide__slides {
+  height: 100%;
+}
+.s-tratamento-base .glide .glide__slide {
+  height: 100%;
+}
+.s-tratamento-base .glide .glide__slide img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+.s-tratamento-base .glide__arrows .glide__arrow {
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  z-index: 10;
+  width: 50px;
+  height: 50px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border: none;
+  border-radius: 50%;
+  color: #fff;
+  font-size: 1.5rem;
+  cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: background-color 0.3s;
+}
+.s-tratamento-base .glide__arrows .glide__arrow:hover {
+  background-color: rgba(0, 0, 0, 0.5);
+}
+.s-tratamento-base .glide__arrows .glide__arrow--left {
+  left: 2rem;
+}
+.s-tratamento-base .glide__arrows .glide__arrow--right {
+  right: 2rem;
+}
+@media (max-width: 992px) {
+  .s-tratamento-base .info-tratamento-base {
+    flex-direction: column;
+  }
+  .s-tratamento-base .tratamento-base-left, .s-tratamento-base .tratamentoBase-right {
+    width: 100%;
+    margin-left: 0;
+  }
+  .s-tratamento-base .tratamento-base-left {
+    padding: 3rem 1.5rem;
+    text-align: center;
+  }
+  .s-tratamento-base .tratamentoBase-right {
+    height: 50vh;
+  }
 }
 
 .s-itens-menu {
