--- a/src/resources/sass/components/_index.sass
+++ b/src/resources/sass/components/_index.sass
@@ -163,7 +163,8 @@
       align-items: center
       margin: 4rem 0 0
       .item-tratamento
-        width: 25%
+        width: 90%
+        text-align: center
         display: flex
         flex-direction: column
         align-items: center
@@ -231,6 +232,7 @@
       .itens-tratamento
         flex-direction: column
         .item-tratamento
+          text-align: center
           width: 50%
           margin: 5rem 0
           min-height: 100%
