--- a/src/sp/resources/sass/components/_index.sass
+++ b/src/sp/resources/sass/components/_index.sass
@@ -11,7 +11,8 @@
   .info-tratamento-base
     display: flex
     align-items: stretch // Faz as colunas terem a mesma altura
-    min-height: 80vh
+    height: auto
+    justify-content: space-between
 
   // --- Coluna da Esquerda (Texto) ---
   .tratamento-base-left
@@ -26,6 +27,7 @@
     justify-content: center
 
     .content-tratamentoBase-left
+      width: 90%
       h2
         font-size: 2.5rem
         margin-bottom: 1.5rem
@@ -33,6 +35,8 @@
         font-size: 1.1rem
         line-height: 1.6
         margin-bottom: 2rem
+      ul
+        width: 90%
       .agendarIndex
         display: inline-block
         padding: 1rem 1.5rem
@@ -101,20 +105,20 @@
         right: 2rem
 
   // --- Ajustes para Mobile ---
-  @media (max-width: 992px)
-    .info-tratamento-base
-      flex-direction: column
-    .tratamento-base-left, .tratamentoBase-right
-      width: 100%
-      margin-left: 0 // Reseta a margem no mobile
-    .tratamento-base-left
-      padding: 3rem 1.5rem
-      text-align: center
-    .tratamentoBase-right
-      height: 50vh
+@media (max-width: 992px)
+  .info-tratamento-base
+    flex-direction: column
+  .tratamento-base-left, .tratamentoBase-right
+    width: 100%
+    margin-left: 0 // Reseta a margem no mobile
+  .tratamento-base-left
+    padding: 3rem 1.5rem
+    text-align: center
+  .tratamentoBase-right
+    height: 50vh
 
 .s-itens-menu
-  margin-top: -7rem
+  margin-top: -5rem
   .container
     .itens-index
       display: flex
@@ -159,7 +163,8 @@
       align-items: center
       margin: 4rem 0 0
       .item-tratamento
-        width: 25%
+        width: 90%
+        text-align: center
         display: flex
         flex-direction: column
         align-items: center
@@ -227,9 +232,11 @@
       .itens-tratamento
         flex-direction: column
         .item-tratamento
+          text-align: center
           width: 50%
           margin: 5rem 0
           min-height: 100%
+          width: 80% !important
           &:first-child
             margin: 2rem 0
           &:last-child
@@ -256,6 +263,7 @@
     .info-tratamento-base
       .tratamento-base-left
         .content-tratamentoBase-left
+          width: 100% !important
           h2
             text-align: center
           .agendarIndex
@@ -269,8 +277,15 @@
         width: 100%
         background: none
         padding: 0
+        margin-left: 0% !important
+        margin-top: 2rem
         .img-right-tratamentoBase
-          margin: 10% 0% 0%
+          margin: none !important
+          margin-left: 0% !important
+          
+          img
+            height: 95% !important
+            object-fit: contain !important
   #gt_float_wrapper
     bottom: 40px !important
       
