--- a/src/sp/resources/sass/main.css
+++ b/src/sp/resources/sass/main.css
@@ -1174,7 +1174,8 @@ body {
 .s-tratamento-base .info-tratamento-base {
   display: flex;
   align-items: stretch;
-  min-height: 80vh;
+  height: auto;
+  justify-content: space-between;
 }
 .s-tratamento-base .tratamento-base-left {
   width: 40%;
@@ -1186,6 +1187,9 @@ body {
   flex-direction: column;
   justify-content: center;
 }
+.s-tratamento-base .tratamento-base-left .content-tratamentoBase-left {
+  width: 90%;
+}
 .s-tratamento-base .tratamento-base-left .content-tratamentoBase-left h2 {
   font-size: 2.5rem;
   margin-bottom: 1.5rem;
@@ -1194,6 +1198,9 @@ body {
   font-size: 1.1rem;
   line-height: 1.6;
   margin-bottom: 2rem;
+}
+.s-tratamento-base .tratamento-base-left .content-tratamentoBase-left ul {
+  width: 90%;
 }
 .s-tratamento-base .tratamento-base-left .content-tratamentoBase-left .agendarIndex {
   display: inline-block;
@@ -1268,25 +1275,25 @@ body {
 .s-tratamento-base .glide__arrows .glide__arrow--right {
   right: 2rem;
 }
+
 @media (max-width: 992px) {
-  .s-tratamento-base .info-tratamento-base {
+  .info-tratamento-base {
     flex-direction: column;
   }
-  .s-tratamento-base .tratamento-base-left, .s-tratamento-base .tratamentoBase-right {
+  .tratamento-base-left, .tratamentoBase-right {
     width: 100%;
     margin-left: 0;
   }
-  .s-tratamento-base .tratamento-base-left {
+  .tratamento-base-left {
     padding: 3rem 1.5rem;
     text-align: center;
   }
-  .s-tratamento-base .tratamentoBase-right {
+  .tratamentoBase-right {
     height: 50vh;
   }
 }
-
 .s-itens-menu {
-  margin-top: -7rem;
+  margin-top: -5rem;
 }
 .s-itens-menu .container .itens-index {
   display: flex;
@@ -1337,7 +1344,8 @@ body {
   margin: 4rem 0 0;
 }
 .none .container .itens-tratamento .item-tratamento {
-  width: 25%;
+  width: 90%;
+  text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -1414,9 +1422,11 @@ body {
     flex-direction: column;
   }
   .none .container .itens-tratamento .item-tratamento {
+    text-align: center;
     width: 50%;
     margin: 5rem 0;
     min-height: 100%;
+    width: 80% !important;
   }
   .none .container .itens-tratamento .item-tratamento:first-child {
     margin: 2rem 0;
@@ -1426,6 +1436,7 @@ body {
   }
   .none .container .itens-tratamento .item-tratamento .text-tratamento {
     height: 100%;
+    text-align: center;
   }
   .none .container .iten-tratamento {
     width: 100%;
@@ -1442,6 +1453,9 @@ body {
   .s-equipe .container .equipe-info {
     flex-direction: column;
   }
+  .s-tratamento-base .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left {
+    width: 100% !important;
+  }
   .s-tratamento-base .info-tratamento-base .tratamento-base-left .content-tratamentoBase-left h2 {
     text-align: center;
   }
@@ -1454,9 +1468,17 @@ body {
     width: 100%;
     background: none;
     padding: 0;
+    margin-left: 0% !important;
+    margin-top: 2rem;
   }
   .s-tratamento-base .info-tratamento-base .tratamentoBase-right .img-right-tratamentoBase {
-    margin: 10% 0% 0%;
+    margin: none !important;
+    margin-left: 0% !important;
+  }
+  .s-tratamento-base .info-tratamento-base .tratamentoBase-right .img-right-tratamentoBase img {
+    height: 95% !important;
+    -o-object-fit: contain !important;
+       object-fit: contain !important;
   }
   #gt_float_wrapper {
     bottom: 40px !important;
